--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "15.0.2",
     "next-auth": "^4.24.10",
     "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "daisyui": "^4.12.14",
